welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: ')' expected but 'else' found.
	else if((Math.min(a,b)>=10&&(Math.min(a,b)<=20)) {
        ^